# effort-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: EFFORT_SPEC_FORMAT.md  GETTING_STARTED.md  INTEGRATION.md
examples/full-featured/: effort.md
examples/minimal/: effort.md
src/effort_agent/: __init__.py  version.py
src/effort_agent/cli/: __init__.py  evaluate_cmd.py  gate_cmd.py  init_cmd.py  lint_cmd.py  main.py
src/effort_agent/core/: __init__.py  effort_agent.py  effort_config.py  effort_memory.py  effort_result.py  verdict.py
src/effort_agent/evaluators/: __init__.py  iteration_tracker.py  research_enforcer.py  shortcut_detector.py  verification_enforcer.py
src/effort_agent/integration/: forgegod_integration.py  mcp_server.py
src/effort_agent/memory_store/: __init__.py  file_store.py  sqlite_store.py
src/effort_agent/models/: __init__.py  effort_spec.py  evaluation.py
src/effort_agent/prompts/: __init__.py  effort_system.py  verdict_prompt.py
tests/: conftest.py  test_effort_agent.py
tests/test_cli/: test_evaluate.py  test_gate.py  test_init.py  test_lint.py
tests/test_core/: test_effort_agent.py  test_effort_config.py  test_effort_memory.py
tests/test_evaluators/: test_iteration_tracker.py  test_shortcut_detector.py
tests/test_integration/: test_mcp_server.py
tests/test_models/: test_effort_spec.py
