[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effort-agent"
version = "0.1.0"
description = "Process integrity enforcer — did you do the work thoroughly?"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ForgeGod Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["process", "integrity", "quality", "effort", "agent", "verification"]

dependencies = [
    "pydantic>=2.11",
    "httpx>=0.28",
    "json-repair>=0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=4.0",
    "ruff>=0.9",
]
sqlite = [
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/waitdead/effort-agent"
Repository = "https://github.com/waitdead/effort-agent"
Documentation = "https://github.com/waitdead/effort-agent/blob/main/docs/GETTING_STARTED.md"

[project.scripts]
effort = "effort_agent.cli.main:cli"
effort-init = "effort_agent.cli.init_cmd:init"
effort-gate = "effort_agent.cli.gate_cmd:gate"
effort-lint = "effort_agent.cli.lint_cmd:lint"
effort-evaluate = "effort_agent.cli.evaluate_cmd:evaluate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
